# tiles

./: .env.example  .gitignore  ANALYSIS.md  Cargo.toml  DESIGN.md  STRUCTURE.md  TILES_AI_PROMPT.md  TODO.md  build.rs  package-lock.json
scripts/: 00_load_constants.sh  01_build_contracts.sh  02_deploy_contracts.sh  03_create_minter.sh  04_mint_token.sh  query_fact.sh  query_minter.sh  query_token_info.sh  query_tokens.sh  query_tx.sh
scripts/cache/: factory.json  factory_contract.json  minter.json  tile.json
scripts/messages/: constants.json  create_minter.json  instantiate_factory.json  instantiate_tile.json  mint.json
scripts/state/: 01_build_contracts.state  02_deploy_contracts.state  03_create_minter.state  04_mint_token.state
scripts/tools/: colors.py  generate_canvas.py  generate_ipfs_content.py  generate_logo.py  generate_test_data.py  generate_tile.py  generate_tile_images.py  update_metadata.py  upload_to_pinata.py
src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs  types.rs  validate.rs
src/contract/: contract.rs  error.rs  execute.rs  instantiate.rs  mod.rs  msg.rs  query.rs  reply.rs  state.rs  tests.rs
src/contract/tiles/: mint.rs  mod.rs  set_pixel_color.rs  update_config.rs  update_price_scaling.rs
src/core/: config.rs  mod.rs  pricing.rs
src/core/config/: mod.rs  traits.rs  types.rs  validation.rs
src/core/pricing/: calculation.rs  mod.rs  validation.rs
src/core/tile/: metadata.rs  mod.rs  state.rs
src/defaults/: config.rs  constants.rs  contract.rs  mod.rs  msg.rs  pixels.rs  roles.rs  tile.rs
src/events/: instantiate_config.rs  instantiate_price_scaling.rs  metadata_update.rs  mint_metadata.rs  mod.rs  payment_distribution.rs  pixel_update.rs  price_scaling.rs
src/utils/: events.rs  extension.rs  hash.rs  metadata.rs  mod.rs  payment.rs  pixel.rs  price.rs  validation.rs
src/validation/: config.rs  mod.rs  pixel.rs
tests/: mod.rs
tests/common/: app.rs  constants.rs  event_assertions.rs  fixtures.rs  launchpad.rs  mock.rs  mod.rs  test_context.rs  test_module.rs  test_orchestrator.rs  tiles_contract.rs  vending_factory.rs
tests/common/app/: mod.rs  module.rs  test_app.rs
tests/common/contracts/: factory.rs  minter.rs  mod.rs  tiles.rs  vending.rs
tests/common/framework/: mod.rs  scenario.rs  test_context.rs
tests/common/helpers/: mock.rs  mock_app.rs  mod.rs  setup.rs  users.rs
tests/common/users/: mod.rs  roles.rs  test_users.rs
tests/contract/: instantiate.rs  mint.rs  mod.rs  pixel.rs  pricescaling.rs  sg721_execute.rs  sg721_features.rs
tests/contract/execute/: config.rs  mint.rs  mod.rs  pricescaling.rs
tests/contract/instantiate/: setup.rs
tests/contract/pixel/: basic.rs  hash.rs  mod.rs  payment.rs  validation.rs
tests/core/: mod.rs
tests/core/config/: mod.rs
tests/core/pricing/: calculation.rs  mod.rs  validation.rs
tests/core/tile/: hash.rs  metadata.rs  mod.rs
tests/integration/: mod.rs
tests/unit/: config_tests.rs  hash_tests.rs  mod.rs  pixel_tests.rs  pricing_tests.rs  vending_factory_tests.rs
tests/utils/: app.rs  events.rs  launchpad.rs  mod.rs  setup.rs
tests/utils/assertions/: mod.rs  response.rs  state.rs
tests/utils/contracts/: factory.rs  minter.rs  mod.rs  tiles.rs
tests/utils/core/: app.rs  launchpad.rs  mod.rs  setup.rs
(+11 files in other folders)
