[package]
name = "tiles"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = { version = "1.5.0", features = ["staking"] }
cw-storage-plus = "1.1.0"
cw-utils = "1.0.3"
cw721 = "0.18.0"
cw721-base = { version = "0.18.0", features = ["library"] }
cw-ownable = "0.5.1"
schemars = "0.8.11"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
sg1 = "3.14.0"
sg2 = "3.14.0"
sg4 = "3.14.0"
sg721 = "3.14.0"
sg721-base = { version = "3.14.0", features = ["library"] }
sg-std = "3.2.0"
thiserror = "1.0.50"
sha2 = "0.10.8"
hex = "0.4.3"

[dev-dependencies]
anyhow = "1.0.75"
sg-multi-test = "3.1.0"
vending-factory = "3.15.0"
vending-minter = "3.15.0"
