[workspace]
resolver = "2"
members = [
    "vendor/vending-minter",
    "vendor/vending-factory"
]

[package]
name = "tiles"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
# Add backtraces feature
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-schema = "1.4.0"
cosmwasm-std = { version = "1.5.0", default-features = false }
cw-storage-plus = { version = "1.2.0", default-features = false }
cw721 = "0.18.0"
cw721-base = "0.18.0"
sg721 = "3.15.0"
sg721-base = { version = "3.15.0", features = ["library"] }
thiserror = { version = "1.0.49", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
hex = { version = "0.4.3", default-features = false }
schemars = "0.8.15"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
cw2 = "1.1.1"
sg-std = "3.2.0"

[build-dependencies]
serde_json = "1.0"
sg-std = "3.2.0"

[dev-dependencies]
anyhow = "1.0.75"
cw-multi-test = "0.16.5"
sg-multi-test = "3.1.0"
sg1 = "3.14.0"
sg2 = "3.14.0"
sg4 = "3.14.0"
vending-factory = "3.15.0"
vending-minter = "3.15.0"

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
panic = "abort"
strip = true

[workspace.dependencies]
cosmwasm-schema = "1.4.0"
cosmwasm-std = "1.5.0"
cw-storage-plus = "1.2.0"
cw721 = "0.18.0"
cw721-base = "0.18.0"
cw-utils = "1.0.3"
sg721 = "3.15.0"
sg721-base = "3.15.0"
sg-std = "3.2.0"
